Xbim.Geometry.Engine.Native/include/xbim_geometry_api.h

typedef struct XbimContext_*        XbimContextHandle;
typedef struct XbimShape_*          XbimShapeHandle;
typedef struct XbimLocation_*       XbimLocationHandle;
typedef struct XbimCurve_*          XbimCurveHandle;
typedef struct XbimCurve2d_*        XbimCurve2dHandle;
typedef struct XbimSurface_*        XbimSurfaceHandle;
typedef int XbimResult;
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_add_wires(
    XbimShapeHandle     faceHandle,
    XbimShapeHandle*    wireHandles,
    int                 wireCount,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_fix(
    XbimShapeHandle     faceHandle,
    double              tolerance,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_surface_build_plane(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double normalX, double normalY, double normalZ,
    double refDirX,  double refDirY,  double refDirZ,
    XbimSurfaceHandle* outHandle,
    double* outRefDirX, double* outRefDirY, double* outRefDirZ);
XBIM_EXPORT XbimResult XBIM_CALL xbim_surface_build_cylindrical(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double radius,
    XbimSurfaceHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_surface_build_spherical(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double radius,
    XbimSurfaceHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_surface_build_bspline(
    XbimContextHandle ctx,
    const double*     polesXYZ,
    int               numPolesU,
    int               numPolesV,
    const double*     uKnots,
    int               numUKnots,
    const double*     vKnots,
    int               numVKnots,
    const int*        uMultiplicities,
    const int*        vMultiplicities,
    int               uDegree,
    int               vDegree,
    const double*     weights,
    XbimSurfaceHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_surface_build_sectioned(
    XbimContextHandle          ctx,
    const double*              pointsXYZ,
    int                        numSections,
    int                        numPointsPerSection,
    const XbimLocationHandle*  locations,
    XbimShapeHandle*           outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_surface_build_revolution(
    XbimContextHandle  ctx,
    XbimCurveHandle    curveHandle,
    double axisOriginX, double axisOriginY, double axisOriginZ,
    double axisDirX,    double axisDirY,    double axisDirZ,
    XbimSurfaceHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_surface_build_linear_extrusion(
    XbimContextHandle  ctx,
    XbimCurveHandle    curveHandle,
    double dirX,    double dirY,    double dirZ,
    double posOX,   double posOY,   double posOZ,
    double posZX,   double posZY,   double posZZ,
    double posXX,   double posXY,   double posXZ,
    int    hasPosition,
    XbimSurfaceHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_triangulate(
    XbimShapeHandle     shapeHandle,
    double              linearDeflection,
    double              angularDeflection,
    int                 relative);
XBIM_EXPORT XbimResult XBIM_CALL xbim_mesh_create_wexbim(
    XbimContextHandle   ctx,
    XbimShapeHandle     shapeHandle,
    double              tolerance,
    double              linearDeflection,
    double              angularDeflection,
    double              scale,
    int                 checkEdges,
    unsigned char**     outBuffer,
    int*                outBufferSize,
    int*                outHasCurves,
    double*             outMinX, double* outMinY, double* outMinZ,
    double*             outMaxX, double* outMaxY, double* outMaxZ);
XBIM_EXPORT XbimResult XBIM_CALL xbim_mesh_get_bounding_box(
    XbimContextHandle   ctx,
    XbimShapeHandle     shapeHandle,
    double              tolerance,
    double              linearDeflection,
    double              angularDeflection,
    double              scale,
    double*             outMinX, double* outMinY, double* outMinZ,
    double*             outMaxX, double* outMaxY, double* outMaxZ);
XBIM_EXPORT void XBIM_CALL xbim_buffer_free(unsigned char* buffer);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_to_brep_string(
    XbimShapeHandle handle,
    char**          outBrepStr,
    int*            outStrLen);
XBIM_EXPORT XbimShapeHandle XBIM_CALL xbim_shape_from_brep_string(
    const char* brepStr,
    int         strLen);
XBIM_EXPORT void XBIM_CALL xbim_string_free(char* str);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_to_binary(
    XbimShapeHandle     handle,
    int                 withTriangles,
    int                 withNormals,
    unsigned char**     outBuffer,
    int*                outSize);
XBIM_EXPORT XbimShapeHandle XBIM_CALL xbim_shape_from_binary(
    const unsigned char*    buffer,
    int                     size);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_unify_domain(
    XbimShapeHandle     shapeHandle,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_line(
    XbimContextHandle   ctx,
    double x1, double y1,
    double x2, double y2,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_unbounded_line(
    XbimContextHandle   ctx,
    double originX, double originY,
    double dirX,    double dirY,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_circle(
    XbimContextHandle   ctx,
    double cx, double cy,
    double radius,
    double refDirX, double refDirY,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_ellipse(
    XbimContextHandle   ctx,
    double cx, double cy,
    double majorRadius, double minorRadius,
    double refDirX, double refDirY,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_trimmed(
    XbimContextHandle   ctx,
    XbimCurve2dHandle   basisHandle,
    double u1, double u2,
    int sense,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_arc_of_circle(
    XbimContextHandle   ctx,
    XbimCurve2dHandle   circleHandle,
    double u1, double u2,
    int sense,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_arc_of_ellipse(
    XbimContextHandle   ctx,
    XbimCurve2dHandle   ellipseHandle,
    double u1, double u2,
    int sense,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_arc_3pt(
    XbimContextHandle   ctx,
    double x1, double y1,
    double x2, double y2,
    double x3, double y3,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_bspline(
    XbimContextHandle   ctx,
    const double*       polesXY,
    int                 numPoles,
    const double*       knots,
    int                 numKnots,
    const int*          multiplicities,
    int                 degree,
    const double*       weights,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_polynomial_spiral(
    XbimContextHandle   ctx,
    const double*       coefficients,
    const int*          coefficientPresent,
    int                 numCoefficients,
    double              startParam,
    double              endParam,
    double              placementX,
    double              placementY,
    double              dirX,
    double              dirY,
    XbimCurveHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_clothoid(
    XbimContextHandle   ctx,
    double              clothoidConstant,
    double              startParam,
    double              endParam,
    double              placementX,
    double              placementY,
    double              dirX,
    double              dirY,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_sine_spiral(
    XbimContextHandle   ctx,
    double              sineTerm,
    double              linearTerm,
    double              constantTerm,
    double              startParam,
    double              endParam,
    double              placementX,
    double              placementY,
    double              dirX,
    double              dirY,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_cosine_spiral(
    XbimContextHandle   ctx,
    double              cosineTerm,
    double              constantTerm,
    double              startParam,
    double              endParam,
    double              placementX,
    double              placementY,
    double              dirX,
    double              dirY,
    XbimCurve2dHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_polynomial_spiral(
    XbimContextHandle   ctx,
    const double*       coefficients,
    const int*          coefficientPresent,
    int                 numCoefficients,
    double              startParam,
    double              endParam,
    double              placementX,
    double              placementY,
    double              dirX,
    double              dirY,
    XbimCurve2dHandle*  outHandle);