Xbim.Geometry.Engine.Interop/Internal/XbimGeometryNativeApi.cs


        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_polynomial_spiral(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] coefficients,
            [MarshalAs(UnmanagedType.LPArray)] int[] coefficientPresent,
            int numCoefficients,
            double startParam, double endParam,
            double placementX, double placementY,
            double dirX, double dirY,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_clothoid(
            NativeContextHandle ctx,
            double clothoidConstant,
            double startParam, double endParam,
            double placementX, double placementY,
            double dirX, double dirY,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_sine_spiral(
            NativeContextHandle ctx,
            double sineTerm, double linearTerm, double constantTerm,
            double startParam, double endParam,
            double placementX, double placementY,
            double dirX, double dirY,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_cosine_spiral(
            NativeContextHandle ctx,
            double cosineTerm, double constantTerm,
            double startParam, double endParam,
            double placementX, double placementY,
            double dirX, double dirY,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_polynomial_spiral(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] coefficients,
            [MarshalAs(UnmanagedType.LPArray)] int[] coefficientPresent,
            int numCoefficients,
            double startParam, double endParam,
            double placementX, double placementY,
            double dirX, double dirY,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_bspline(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] polesXY,
            int numPoles,
            [MarshalAs(UnmanagedType.LPArray)] double[] knots,
            int numKnots,
            [MarshalAs(UnmanagedType.LPArray)] int[] multiplicities,
            int degree,
            [MarshalAs(UnmanagedType.LPArray)] double[]? weights,
            out NativeCurve2dHandle outHandle);

        #endregion

        #region Surface Construction

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_surface_build_plane(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double normalX, double normalY, double normalZ,
            double refDirX, double refDirY, double refDirZ,
            out NativeSurfaceHandle outHandle,
            out double outRefDirX, out double outRefDirY, out double outRefDirZ);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_surface_build_cylindrical(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double radius,
            out NativeSurfaceHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_surface_build_spherical(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double radius,
            out NativeSurfaceHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_surface_build_bspline(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] polesXYZ,
            int numPolesU,
            int numPolesV,
            [MarshalAs(UnmanagedType.LPArray)] double[] uKnots,
            int numUKnots,
            [MarshalAs(UnmanagedType.LPArray)] double[] vKnots,
            int numVKnots,
            [MarshalAs(UnmanagedType.LPArray)] int[] uMultiplicities,
            [MarshalAs(UnmanagedType.LPArray)] int[] vMultiplicities,
            int uDegree,
            int vDegree,
            [MarshalAs(UnmanagedType.LPArray)] double[]? weights,
            out NativeSurfaceHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_surface_build_sectioned(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] pointsXYZ,
            int numSections,
            int numPointsPerSection,
            [In] IntPtr[] locations,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_surface_build_revolution(
            NativeContextHandle ctx,
            NativeCurveHandle curveHandle,
            double axisOriginX, double axisOriginY, double axisOriginZ,
            double axisDirX, double axisDirY, double axisDirZ,
            out NativeSurfaceHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_surface_build_linear_extrusion(
            NativeContextHandle ctx,
            NativeCurveHandle curveHandle,
            double dirX, double dirY, double dirZ,
            double posOX, double posOY, double posOZ,
            double posZX, double posZY, double posZZ,
            double posXX, double posXY, double posXZ,
            int hasPosition,
            out NativeSurfaceHandle outHandle);

        #endregion

        #region Mesh / WexBim

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_triangulate(
            NativeShapeHandle shapeHandle,
            double linearDeflection,
            double angularDeflection,
            int relative);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_mesh_create_wexbim(
            NativeContextHandle ctx,
            NativeShapeHandle NativeShapeHandle,
            double tolerance,
            double linearDeflection,
            double angularDeflection,
            double scale,
            int checkEdges,
            out IntPtr outBuffer,
            out int outBufferSize,
            out int outHasCurves,
            out double outMinX, out double outMinY, out double outMinZ,
            out double outMaxX, out double outMaxY, out double outMaxZ);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_mesh_get_bounding_box(
            NativeContextHandle ctx,
            NativeShapeHandle NativeShapeHandle,
            double tolerance,
            double linearDeflection,
            double angularDeflection,
            double scale,
            out double outMinX, out double outMinY, out double outMinZ,
            out double outMaxX, out double outMaxY, out double outMaxZ);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern void xbim_buffer_free(IntPtr buffer);

        #endregion

        #region BRep Serialization

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_to_brep_string(
            NativeShapeHandle handle,
            out IntPtr outBrepStr,
            out int outStrLen);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern NativeShapeHandle xbim_shape_from_brep_string(
            [MarshalAs(UnmanagedType.LPStr)] string brepStr,
            int strLen);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern void xbim_string_free(IntPtr str);

        #endregion

        #region Binary Shape Serialization

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_to_binary(
            NativeShapeHandle handle,
            int withTriangles,
            int withNormals,
            out IntPtr outBuffer,
            out int outSize);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern NativeShapeHandle xbim_shape_from_binary(
            IntPtr buffer,
            int size);

        #endregion

        #region Shape Repair / Domain

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_unify_domain(
            NativeShapeHandle shapeHandle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_add_wires(
            NativeShapeHandle faceHandle,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] wireHandles,
            int wireCount,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_fix(
            NativeShapeHandle faceHandle,
            double tolerance,
            out NativeShapeHandle outHandle);

        #endregion

        #region XbimCurve2d Construction

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_line(
            NativeContextHandle ctx,
            double x1, double y1,
            double x2, double y2,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_unbounded_line(
            NativeContextHandle ctx,
            double originX, double originY,
            double dirX, double dirY,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_circle(
            NativeContextHandle ctx,
            double cx, double cy,
            double radius,
            double refDirX, double refDirY,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_ellipse(
            NativeContextHandle ctx,
            double cx, double cy,
            double majorRadius, double minorRadius,
            double refDirX, double refDirY,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_trimmed(
            NativeContextHandle ctx,
            NativeCurve2dHandle basisHandle,
            double u1, double u2,
            int sense,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_arc_of_circle(
            NativeContextHandle ctx,
            NativeCurve2dHandle circleHandle,
            double u1, double u2,
            int sense,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_arc_of_ellipse(
            NativeContextHandle ctx,
            NativeCurve2dHandle ellipseHandle,
            double u1, double u2,
            int sense,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_arc_3pt(
            NativeContextHandle ctx,
            double x1, double y1,
            double x2, double y2,
            double x3, double y3,
            out NativeCurve2dHandle outHandle);
